# aegis

./: README.md  pyproject.toml  structure.md
src/: combination copy.ipynb  combination.ipynb  image_enc_baseline.ipynb  processing.py  sam2_dinov2_pipeline.py  sam_dinov2_pipeline.py
src/encoders/: dinov2.py  florence.py  naradio.py
src/output/: anchor_db.pkl  anchor_db_scand_spot_cafe.pkl  anchor_db_scand_spot_fountain-lib.pkl  anchors_export.json  anchors_export_scand_spot_cafe.json
src/output/2024_07_19__18_08_45/: anchor_db.pkl  anchors_export.json
src/output/scand_spot_cafe/: anchor_db.pkl  anchors_export.json
src/output/scand_spot_cafe-2/: anchor_db-2.pkl  anchor_db.pkl  anchors_export-2.json  anchors_export.json
src/output/scand_spot_fountain-lib/: anchor_db.pkl  anchors_export.json
src/output/unified_chunks/: unified_chunk_0004.json  unified_chunk_scand_spot_cafe_09.json  unified_chunk_scand_spot_fountain-lib_03.json
src/segmentation/: sam.py
src/vizenc_utils/: __init__.py  anchors.py  bbox_utils.py  matching.py  metrics.py  tracking.py  visualization.py
