[project]
name = "vizenc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "nanobind>=2.10.2",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pycocotools==2.0.11",
    "rerun-sdk>=0.28.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "segment-anything>=1.0",
    "timm>=1.0.24",
    "torch==2.4.1",
    "torch-scatter>=2.1.2",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/"
